Enhance detect duplicate functionality